--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-  padding: 2rem 0;
+  /* padding: 2rem 0; */
   background: var(--lightGrey);
   font-size: 1.2rem;
 }
@@ -7,4 +7,19 @@
 .footer a {
   color: black;
   text-decoration: none;
+}
+
+.newsletter {
+  background-image: linear-gradient(82deg, #00d9f1, #00b1df);
+  height: 250px;
+  padding: 50px;
+  line-height: 3rem;
+}
+.padding-lr-20px {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.newsletter-group {
+  padding-left: 100px;
+  padding-right: 100px;
 }
