--- a/src/components/Logo.css
+++ b/src/components/Logo.css
@@ -1,10 +1,21 @@
 .Logo {
   display: flex;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  height: 4rem;
-  width: 4rem;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
+}
+
+.Logo-icon {
+  background: var(--primary);
+  height: 3rem;
+  width: 3rem;
+  border-radius: 1.5rem;
+  display: inline-block;
+}
+.Logo-title {
+  text-underline-position: unset;
+  margin-left: 1rem;
+  color: gray;
+  font-size: 20px;
+  font-weight: 700;
+  display: inline-block;
 }
