--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -2,7 +2,7 @@
   background: white;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 10;
   border-bottom: 1px solid var(--lightGrey);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.025);
 }
@@ -10,7 +10,7 @@
 .Nav--Container {
   display: flex;
   align-items: center;
-  height: 6rem;
+  height: 10.5rem;
 }
 
 .Nav--Links {
@@ -18,6 +18,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: row;
+  margin-left: auto;
 }
 
 .Nav--Links > * + * {
@@ -103,7 +104,7 @@
   width: 15rem;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 750px) {
   .Nav--Container {
     display: flex;
   }
