--- a/src/components/PageHeader.css
+++ b/src/components/PageHeader.css
@@ -1,25 +1,28 @@
 .PageHeader {
-  background-color: var(--darkGrey);
-  color: white;
-  padding: 15rem 0;
+  /* background-color: var(--darkGrey); */
+  /* color: white; */
+  padding-top: 5rem;
 }
 
 .PageHeader .BackgroundImage {
-  opacity: 0.8;
+  /* opacity: 0.8; */
 }
 
 .PageHeader-large {
-  padding: 20rem 0;
+  padding: 5rem 0;
 }
 
 .PageHeader--Title {
-  font-size: 6rem;
-  margin-bottom: 0;
+  font-size: 4rem;
+  font-weight: 300;
+  line-height: 5rem;
+  margin-bottom: 1.5rem;
 }
 
 .PageHeader--Subtitle {
   font-weight: 400;
-  font-size: 1.8rem;
+  font-size: 2.5rem;
+  color: #515151;
 }
 
 .PageHeader .container {
@@ -28,9 +31,24 @@
 
 @media (max-width: 600px) {
   .PageHeader {
-    padding: 7rem 0;
+    padding: 3rem 0;
   }
   .PageHeader-large {
-    padding: 12.5rem 0;
+    padding: 6rem 0;
   }
+}
+
+.PageHeader--Two-col {
+  width: 50%;
+  display: inline-block;
+  vertical-align: top;
+}
+
+.PageHeader--Img {
+  /* margin: 0 0 2rem 0; */
+  width: 550px;
+  height: 415px;
+}
+.PageHeader-Btn {
+  margin: 5rem auto;
 }
