--- a/src/components/globalStyles.scss
+++ b/src/components/globalStyles.scss
@@ -1,11 +1,11 @@
 :root {
-  --primary: #00c2bd;
-  --secondary: #000;
+  --primary: #00b1df;
+  --secondary: #515151;
   --lightGrey: whitesmoke;
   --midGrey: #cacaca;
   --darkGrey: #272727;
   --danger: #ff3d3d;
-  --font-primary: 'Open Sans', sans-serif;
+  --font-primary: 'AvenirNext', 'Open Sans', sans-serif;
   --font-system: system-ui; /* postcssPresetEnv */
   --borderRadius: 3px;
 }
@@ -39,10 +39,10 @@ body {
   position: relative;
   background: white;
   color: var(--secondary);
-  font-size: 1.6em;
+  font-size: 1.4em;
   font-weight: 400;
   letter-spacing: 0.01em;
-  line-height: 1.6;
+  line-height: 1.4;
   -webkit-font-smoothing: antialiased;
 }
 
@@ -65,8 +65,10 @@ h3,
 h4,
 h5,
 h6 {
+  color: var(--primary);
   margin: 0;
   margin-bottom: 0.5em;
+  font-weight: 400;
 }
 
 pre {
@@ -121,6 +123,10 @@ blockquote {
 .dark h4,
 .dark h5,
 .dark h6 {
+  color: white;
+}
+
+.color-white {
   color: white;
 }
 
@@ -184,7 +190,7 @@ blockquote {
 }
 
 .container {
-  max-width: 1111px;
+  max-width: 1400px;
   width: 90%;
   margin: 0 auto;
 }
@@ -200,17 +206,18 @@ blockquote {
 .Button {
   background: var(--primary);
   color: white;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   text-decoration: none;
   font-weight: 700;
   letter-spacing: 0.05em;
   font-size: 1.4rem;
   display: inline-block;
-  padding: 1.25rem 3rem;
+  padding: 0.3rem 4rem;
   border: none;
   transition: all 0.2s ease;
   cursor: pointer;
   border-radius: var(--borderRadius);
+  height: 3rem;
 }
 .Button:hover,
 .Button:focus {
@@ -223,12 +230,95 @@ blockquote {
   cursor: progress;
 }
 .Button-blank {
+  color: var(--primary);
   appearance: none;
   background: none;
   outline: none;
   border: none;
   cursor: pointer;
-  display: flex;
+  display: inline-block;
   align-items: center;
   justify-content: center;
+  padding: 1.25rem 4rem;
+}
+.input-group-append {
+    margin-left: -1px;
+}
+
+.input-group-append, .input-group-prepend {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+}
+.group-right-control {
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+}
+.group-left-control {
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
+.mb-3, .my-3 {
+    margin-bottom: 1rem!important;
+}
+.input-group {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    -webkit-box-align: stretch;
+    align-items: stretch;
+    width: 100%;
+    margin-bottom: 1rem;
+}
+*, ::after, ::before {
+    box-sizing: border-box;
+}
+.form-control {
+  flex: 1 1 auto;
+}
+
+.footer-col {
+  display: inline-block;
+  width: 20%;
+  vertical-align: top;
+  text-align: left;
+  margin-bottom: 30px;
+  @media (max-width: 1200px) {
+    width: 33.3%;
+  }
+  @media (max-width: 768px) {
+    width: 50%;
+  }
+  @media (max-width:480px) {
+    width: 100%;
+  }
+}
+.footer-col-top-item {
+  font-size: 1.7rem;
+  margin-bottom: 2rem;
+}
+.footer-col-item {
+  font-size: 1.4rem;
+  margin-bottom: 1rem;
+}
+.footer-link {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.sns-icon {
+  margin-right: 10px;
+  color: var(--primary);
+}
+.center {
+  text-align: center;
+}
+.subtitle {
+  font-size: 28px;
+  color: #515151;
+  margin-bottom: 40px;
+}
+
+.display-none {
+  display: none;
 }
